--- a/turbovpn.json
+++ b/turbovpn.json
@@ -5,24 +5,9 @@
 "version":12,
 
 "message": "เวอร์ชันไฟล์:12\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
-
--🔴 TRUE ESPORT
-
--🔴 TRUE ID
-
--🔴 𝚃𝚁𝚄𝙴 𝚅𝙸𝙱𝙴𝚁
-
--🔴 𝚃𝚁𝚄𝙴 𝚅𝙸𝚄
-
--🔵 DTAC GAMING
-
--🟢 AIS PLAY
-
-
-
-ขอบคุณที่ใช้เเอพของผมครับ😊
-
-ใช้ดีอย่าลืมรีวิว 5 ดาว 🌟 บน play store ด้วยนะครับ",
+เเก้ไขเซิร์ฟเวอร์
+🔴TRUE ID
+🔴TRUE VIU",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
