--- a/turbovpn.json
+++ b/turbovpn.json
@@ -37,11 +37,11 @@
 
 
 
-         "name": "TH-FREE-01",
+         "name": "READYIDC-1",
 
 
 
-         "url": "http://141.98.18.205:82/server/online_app.json"
+         "url": "https://siamdata4.gameinter.shop:56458/xGaEULgui2/"
 
 
 
