--- a/turbovpn.json
+++ b/turbovpn.json
@@ -41,7 +41,7 @@
 
 
 
-         "url": "https://siamdata4.gameinter.shop:56458/xGaEULgui2/"
+         "url": "https://siamdata4.gameinter.shop:56458/xGaEULgui2.json"
 
 
 
