--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,13 @@
 
   
 
-"version":12,
+"version":13,
 
-"message": "เวอร์ชันไฟล์:12\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:13\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เเก้ไขเซิร์ฟเวอร์
 🔴TRUE ID
-🔴TRUE VIU",
+🔴TRUE VIU
+🔴TRUE VIBER",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
