--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,11 +2,11 @@
 
   
 
-"version":14,
+"version":15,
 
-"message": "เวอร์ชันไฟล์:14\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
-เเก้ไขเซิร์ฟเวอร์
-🔴TRUE VIBER",
+"message": "เวอร์ชันไฟล์:15\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+เพิ่มเซิร์ฟเวอร์
+🔴TRUE​ NOPRO(DNS)​ ",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
