--- a/turbovpn.json
+++ b/turbovpn.json
@@ -6,13 +6,14 @@
 
 "message": "เวอร์ชันไฟล์:15\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
-🔴TRUE​ NOPRO(DNS)​ ",
+🔴TRUE​ NOPRO(DNS)​
+  ดูโฆษณา​ได้​ 72 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
 
 
-"RewardAmount": 24,
+"RewardAmount": 72,
 
 
 
