--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,11 +2,17 @@
 
   
 
-"version":15,
+"version":16,
 
-"message": "เวอร์ชันไฟล์:15\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:16\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
 🔴TRUE​ NOPRO(DNS)​
+🔴TRUE ESPORT
+🔴TRUE ID
+🔴TRUE VIBER
+🔴TRUE VIU
+🟢AIS PLAY
+🔵DTAC GAMING
   ดูโฆษณา​ได้​ 72 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
