--- a/turbovpn.json
+++ b/turbovpn.json
@@ -6,12 +6,13 @@
 
 "message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
-🔴TRUE ESPORT
-🔴TRUE ID
-🔴TRUE VIBER
-🔴TRUE VIU
-🟢AIS PLAY
-🔵DTAC GAMING
+🔴TRUE ESPORT (V2ray)
+🔴TRUE ID (ssh)
+🔴TRUE VIBER (ssh)
+🔴TRUE VIU (V2ray)
+🔴TRUE PLOOKPANYA (V2ray)
+🟢AIS PLAY (V2ray)
+🔵DTAC GAMING (V2ray)
   ดูโฆษณา​ได้​ 12 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
