--- a/turbovpn.json
+++ b/turbovpn.json
@@ -13,6 +13,8 @@
 🔴TRUE PLOOKPANYA (V2ray)
 🟢AIS PLAY (V2ray)
 🔵DTAC GAMING (V2ray)
+🔵DTAC ID (ssh)
+🔵DTAC NOPRO (slow dns)
   ดูโฆษณา​ได้​ 12 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
