--- a/turbovpn.json
+++ b/turbovpn.json
@@ -11,9 +11,11 @@
 🔴TRUE VIBER (ssh)
 🔴TRUE VIU (V2ray)
 🔴TRUE PLOOKPANYA (V2ray)
+🔴TRUE เรียนฟรี (ssh)
 🟢AIS PLAY (V2ray)
 🔵DTAC GAMING (V2ray)
 🔵DTAC ID (ssh)
+🔵DTAC TWITTER (ssh)
   ดูโฆษณา​ได้​ 12 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
