--- a/turbovpn.json
+++ b/turbovpn.json
@@ -12,6 +12,7 @@
 🔴TRUE VIU (V2ray)
 🔴TRUE PLOOKPANYA (V2ray)
 🔴TRUE เรียนฟรี (ssh)
+🔴TRUE กันรั่ว (V2ray)
 🟢AIS PLAY (V2ray)
 🔵DTAC GAMING (V2ray)
 🔵DTAC ID (ssh)
