--- a/turbovpn.json
+++ b/turbovpn.json
@@ -17,6 +17,7 @@
 🔵DTAC GAMING (V2ray)
 🔵DTAC ID (ssh)
 🔵DTAC TWITTER (ssh)
+🟠MY NOPRO (ssh)
   ดูโฆษณา​ได้​ 12 ชม.",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
