--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,23 +2,17 @@
 
   
 
-"version":1,
+"version":2,
 
-"message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:2\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
-🔴TRUE ESPORT (V2ray)
-🔴TRUE ID (ssh)
-🔴TRUE VIBER (ssh)
-🔴TRUE VIU (V2ray)
-🔴TRUE PLOOKPANYA (V2ray)
-🔴TRUE เรียนฟรี (ssh)
-🔴TRUE กันรั่ว (V2ray)
-🟢AIS PLAY (V2ray)
-🔵DTAC GAMING (V2ray)
-🔵DTAC ID (ssh)
-🔵DTAC TWITTER (ssh)
-🟠MY NOPRO (ssh)
-  ดูโฆษณา​ได้​ 12 ชม.",
+🔴TRUE ESPORT
+🔴TRUE ID
+🔴TRUE VIBER
+🔴TRUE VIU
+🔴TRUE เรียนฟรี
+🟢AIS PLAY
+🔵DTAC GAMING",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
