--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,17 +2,11 @@
 
   
 
-"version":1,
+"version":2,
 
-"message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:2\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
-🔴TRUE ESPORT
-🔴TRUE ID
-🔴TRUE VIBER
-🔴TRUE VIU
-🔴TRUE เรียนฟรี
-🟢AIS PLAY
-🔵DTAC GAMING",
+stlray vpn",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
