--- a/turbovpn.json
+++ b/turbovpn.json
@@ -6,7 +6,11 @@
 
 "message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 เพิ่มเซิร์ฟเวอร์
-",
+-🔴 TRUE ESPORT
+-🔴 TRUE ID
+-🔵 DTAC GAMING
+-🟢 AIS PLAY
+  ,
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
