--- a/turbovpn.json
+++ b/turbovpn.json
@@ -5,18 +5,30 @@
 "version":1,
 
 "message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
-เพิ่มเซิร์ฟเวอร์
--🔴 TRUE ESPORT
--🔴 TRUE ID
--🔵 DTAC GAMING
--🟢 AIS PLAY
-  ",
+
+-🔴TRUE ESPORT
+-🔴TRUE ID
+-🔴TRUE VIBER
+-🔴TRUE VIU
+-🔴TRUE PLOOKPANYA
+-🔴TRUE STUDY FREE
+-🔵DTAC GAMING
+-🔵DTAC SOCIAL
+-🔵DTAC ID
+-🟢AIS PLAY
+-🟠MY NOPRO
+
+
+
+ขอบคุณที่ใช้เเอพของผมครับ😊
+
+ใช้ดีอย่าลืมรีวิว 5 ดาว 🌟 บน play store ด้วยนะครับ",
 
 "fileUrl": "https://raw.githubusercontent.com/Anawinkulmor/VPN/refs/heads/main/fileturbovpn1.json",
 
 
 
-"RewardAmount": 12,
+"RewardAmount": 24,
 
 
 
@@ -40,11 +52,11 @@
 
 
 
-         "name": "READYIDC-1",
+         "name": "TH-FREE-01",
 
 
 
-         "url": "https://siamdata4.gameinter.shop:56458/xGaEULgui2.json"
+         "url": "http://141.98.18.205:82/server/online_app.json"
 
 
 
