--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,10 +2,11 @@
 
   
 
-"version":1,
+"version":2,
 
-"message": "เวอร์ชันไฟล์:1\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:2\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
+  เพิ่มความเสถียรเซิร์ฟเวอร์​
 -🔴TRUE ESPORT
 -🔴TRUE ID
 -🔴TRUE VIBER
