--- a/turbovpn.json
+++ b/turbovpn.json
@@ -36,9 +36,9 @@
 
 "title":"ไม่สามารถใช้เวอร์ชันปัจจุบันต่อได้ คุณต้องอัปเกรด ",
 
-"link":"https://play.google.com/store/apps/details?id=turbovpn.pro.net",
+"link":"https://play.google.com/store/apps/details?id=zentunnel.pro.net",
 
-"website":"https://play.google.com/store/apps/details?id=turbovpn.pro.net",
+"website":"https://play.google.com/store/apps/details?id=zentunnel.pro.net",
 
 "versionCode": 1,
 
