--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,23 +2,12 @@
 
   
 
-"version":2,
+"version":3,
 
-"message": "เวอร์ชันไฟล์:2\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:3\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-  เพิ่มความเสถียรเซิร์ฟเวอร์​
--🔴TRUE ESPORT
--🔴TRUE ID
--🔴TRUE VIBER
+เเก้ไขเซิร์ฟเวอร์
 -🔴TRUE VIU
--🔴TRUE PLOOKPANYA
--🔴TRUE STUDY FREE
--🔵DTAC GAMING
--🔵DTAC ID
--🟢AIS PLAY
--🟠MY NOPRO
-
-
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
