--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,12 @@
 
   
 
-"version":3,
+"version":4,
 
-"message": "เวอร์ชันไฟล์:3\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:4\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เเก้ไขเซิร์ฟเวอร์
--🔴TRUE VIU
+ปรับปรุง
+-🔴TRUE VIBER
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
