--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,11 @@
 
   
 
-"version":4,
+"version":5,
 
-"message": "เวอร์ชันไฟล์:4\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:5\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-ปรับปรุง
--🔴TRUE VIBER
+ปรับปรุงคุณภาพเซิร์ฟเวอร์
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
