--- a/turbovpn.json
+++ b/turbovpn.json
@@ -40,11 +40,11 @@
 
 
 
-         "name": "TH-FREE-01",
+         "name": "READY​_ID​C-1",
 
 
 
-         "url": "http://102.211.232.52:81/server/online_app.json"
+         "url": "http://43.228.86.242:82/server/online_app.json"
 
 
 
