--- a/turbovpn.json
+++ b/turbovpn.json
@@ -6,7 +6,7 @@
 
 "message": "เวอร์ชันไฟล์:8\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เเก้ไข DTAC GAMING 
+เเก้ไข 🔵DTAC GAMING 
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
