--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,11 +2,12 @@
 
   
 
-"version":8,
+"version":9,
 
-"message": "เวอร์ชันไฟล์:8\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:9\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เเก้ไข 🔵DTAC GAMING 
+เพิ่มเซิร์ฟเวอร์
+-🔴TRUE ZOOM
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
