--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,11 +2,12 @@
 
   
 
-"version":10,
+"version":11,
 
-"message": "เวอร์ชันไฟล์:10\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:11\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เพิ่มเซิร์ฟเวอร์ ระบบ V2ray ให้สามารถเล่นเกมส์ได้
+เเก้ไขเซิร์ฟเวอร์
+🔴TRUE เรียนฟรี
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
