--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,12 @@
 
   
 
-"version":11,
+"version":12,
 
-"message": "เวอร์ชันไฟล์:11\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:12\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
 เเก้ไขเซิร์ฟเวอร์
-🔴TRUE เรียนฟรี
+🟠MY NOPRO เปลี่ยนเป็นระบบ V2ray
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
