--- a/turbovpn.json
+++ b/turbovpn.json
@@ -7,7 +7,7 @@
 "message": "เวอร์ชันไฟล์:12\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
 เเก้ไขเซิร์ฟเวอร์
-🟠MY NOPRO เปลี่ยนเป็นระบบ V2ray
+🔵DTAC GAMING เปลี่ยนเป็นระบบ ssh
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
