--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,12 @@
 
   
 
-"version":13,
+"version":14,
 
-"message": "เวอร์ชันไฟล์:13\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:14\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เเก้ไขเซิร์ฟเวอร์
-🔵DTAC GAMING เปลี่ยนเป็นระบบ ssh
+เพิ่มเซิร์ฟเวอร์
+🔴TRUE ZOOM ระบบ ssh กันหลุด
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
