--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,14 @@
 
   
 
-"version":15,
+"version":16,
 
-"message": "เวอร์ชันไฟล์:15\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:16\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
 เพิ่มเซิร์ฟเวอร์
-🟠MY NOPRO ระบบ ssh กันหลุด
+VIP 
+USERNAME vXO3F7Fi
+PASSWORD vXO3F7Fi
 
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
