--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,15 +2,13 @@
 
   
 
-"version":16,
+"version":17,
 
-"message": "เวอร์ชันไฟล์:16\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:17\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เพิ่มเซิร์ฟเวอร์
-VIP 
-USERNAME vXO3F7Fi
-PASSWORD vXO3F7Fi
-
+เเก้ไขซิร์ฟเวอร์
+🔵DTAC GAMING 
+  
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
 ใช้ดีอย่าลืมรีวิว 5 ดาว 🌟 บน play store ด้วยนะครับ",
