--- a/turbovpn.json
+++ b/turbovpn.json
@@ -2,12 +2,11 @@
 
   
 
-"version":17,
+"version":18,
 
-"message": "เวอร์ชันไฟล์:17\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
+"message": "เวอร์ชันไฟล์:18\nมีอะไรใหม่ \nอัพเดทเซิร์ฟเวอร์
 
-เเก้ไขซิร์ฟเวอร์
-🔵DTAC GAMING 
+เเก้ไขโฆษณาให้สามารถดูได้ตามปกติ
   
 ขอบคุณที่ใช้เเอพของผมครับ😊
 
